--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@directus/sdk": "^10.1.5",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
@@ -42,7 +43,10 @@
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.3.1",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
+    "sass": "^1.56.0",
+    "sass-loader": "^10.3.1",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
   },
