--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/app": "4.1.0",
     "@capacitor/camera": "^4.1.3",
     "@capacitor/core": "4.4.0",
+    "@capacitor/geolocation": "^4.0.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
@@ -21,6 +22,7 @@
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@studiometa/vue-mapbox-gl": "^2.0.1",
     "core-js": "^3.6.5",
     "ionicons": "^6.0.3",
     "vue": "^3.2.21",
