--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "rimraf dist node_modules"
   },
   "dependencies": {
+    "@capacitor/android": "^4.4.0",
     "@capacitor/app": "4.1.0",
     "@capacitor/camera": "^4.1.3",
     "@capacitor/core": "4.4.0",
